[package]
name = "lunalib_rust"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of LunaLib: cryptocurrency wallet and mining system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/lunalib_rust"
readme = "README.md"

[dependencies]
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde_json = "1.0"
dirs = "6.0.0"
tempfile = "3.24.0"

chrono = { version = "0.4", features = ["serde"] }

base64 = "0.21"
ring = "0.16"
